[package]
name = "minchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "~1.1"
env_logger = "0.10"
log = { version = "0.4.4" }
mio = { version = "0.8", features = ["net", "os-poll"] }
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
rcgen = { version = "0.11.3", features = ["pem"], default-features = false }
rustls = { version = "0.22.0", features = [ "logging" ]}
rustls-pemfile = "2"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "0.26"
