[package]
name = "minchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.22", default-features = false }
tokio-rustls = "0.25"
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
rustls-pemfile = "2"
